k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
  - host: "ingress.fullcycle-valdir.com.br"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: goserver-service
              port: 
                number: 80
